apps/petcarelog/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petcarelog
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: petcarelog
          image: 194722398200.dkr.ecr.ap-northeast-2.amazonaws.com/team5-petcarelog-prod:aef9557e89cfc62b2868f732dbaaf25a24ee09df
