apps/petcarelog/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petcarelog-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: petcarelog-prod
    alb.ingress.kubernetes.io/load-balancer-name: team5-petcarelog-prod-alb #추가 부분
    alb.ingress.kubernetes.io/tags: Environment=prod,Project=petcarelog,team=team5
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petcarelog-service
                port:
                  number: 80


# 도메인과 HTTPS를 붙이면 아래로 변경하기
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: petcarelog-ingress
#   annotations:
#     alb.ingress.kubernetes.io/group.name: petcarelog-prod
#     alb.ingress.kubernetes.io/load-balancer-name: team5-petcarelog-prod-alb #추가 부분
#     alb.ingress.kubernetes.io/tags: Environment=prod,Project=petcarelog,team=team5

#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
#     alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:131745734264:certificate/..."
#     alb.ingress.kubernetes.io/ssl-redirect: "443"
# spec:
#   rules:
#     - host: api.yuhyun-kim.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: petcarelog-service
#                 port:
#                   number: 80
